# 20260508-04-logic-depth-and-friend-test-pkg

./: .gitignore  LICENSE  README.md  findings.md  next-steps.md  pyproject.toml
.claude/agents/: xlsm-auditor.md
.github/: copilot-instructions.md
.github/agents/: xlsm-audit.agent.md
docs/: example-enriched-audit.de.html  example-enriched-audit.de.md  example-enriched-audit.en.html  example-enriched-audit.en.md  example-enriched-audit.html  example-enriched-audit.md  example-enriched-audit.zh.html  example-enriched-audit.zh.md  example-llm-responses.json  friend-test-setup.md  harness-guide.md  output-sample.md  start-here.html  test-corpus.md
research/: agent-harness-research.md
src/tier1_audit/: __init__.py  __main__.py  anomalies.py  audit.py  cli.py  domain.py  domains.py  extract.py  formula_utils.py  harness.py  i18n.py  ingest.py  pillars.py  render.py  smells.py  vba_classify.py  vba_narrate.py  workflow.py
src/tier1_audit/i18n/: de.json  en.json  zh.json
tests/: test_corpus.py  test_harness.py  test_i18n.py  test_new_corpus.py
tests/fixtures/: anomaly_fixture.xlsm  build_anomaly_fixture.py  build_corpus.py  inventory_supply_synth.xlsm  logistics_routing_synth.xlsm  minimal_no_vba.xlsm
