[project]
name = "tier1-audit"
version = "0.1.0"
description = "Static-analysis audit for legacy xlsm/xlsb workbooks — pillar cells, magic-number anomalies, VBA classification. Local-only, zero LLM."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Michael Tang"},
]
keywords = ["excel", "xlsm", "vba", "audit", "static-analysis", "legacy", "refactoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "openpyxl>=3.1",
    "oletools>=0.60",
    "formulas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
]

[project.scripts]
audit-xlsm = "tier1_audit.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/tier1-audit"
Issues = "https://github.com/your-org/tier1-audit/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
